<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">CropSpot</string>
    <string name="ui_text_login">Login</string>
    <string name="ui_text_register">Register</string>
    <string name="ui_text_logout">Logout</string>
    <string name="ui_text_main">Hi</string>
    <string name="ui_user_guest">Guest</string>
    <string name="ui_text_camera" translatable="false">Camera</string>
    <string name="ui_text_gallery" translatable="false">Gallery</string>
    <string name="ui_text_cancel">Cancel</string>
    <string name="ui_head_account">Accounts</string>
    <string name="ui_text_search">Search</string>
    <string name="ui_text_account" translatable="false">Account</string>
    <string name="ui_text_settings" translatable="false">Settings</string>
    <string name="ui_desc_search">More crop disease information</string>
    <string name="ui_desc_account">Login or Register account</string>
    <string name="ui_desc_settings">Personalize the app</string>
    <string name="ui_desc_login">Login to carry over your diagnosis and search history across multiple devices.</string>
    <string name="ui_desc_register">Register an account to save and access your data on any device.</string>
    <string name="ui_desc_logout">Are you sure? Subsequent diagnosis and search queries will not be saved</string>
    <string name="ui_text_diseases">Diseases</string>
    <string name="ui_text_crops">Crops</string>
    <string name="ui_text_today">Today</string>
    <string name="ui_hint_search">Search diseases</string>
    <string name="ui_text_result">Result</string>
    <string name="ui_warn_diagnosis_fail">Unable to diagnose</string>
    <string name="ui_desc_diagnosis_fail">No %s detected</string>
    <string name="ui_text_analyzing">Analyzing…</string>
    <string name="ui_head_search">Showing results for</string>
    <string name="ui_warn_search">No results found</string>
    <string name="ui_warn_history">No diagnosis found</string>
    <string name="ui_head_customization">Customization</string>
    <string name="ui_text_theme" translatable="false">Theme</string>
    <string name="ui_text_language">Language</string>
    <string name="ui_desc_lang">Choose Language</string>
    <string name="ui_head_personal">Personal Data</string>
    <string name="ui_text_clear_diagnosis">Clear Diagnosis History</string>
    <string name="ui_desc_clear_diagnosis">Erase all of the recorded diagnosis of this account permanently</string>
    <string name="ui_text_clear_search">Clear Search History</string>
    <string name="ui_desc_clear_search">Erase all of the search queries made in this account permanently</string>
    <string name="ui_warn_clear_diagnosis">Are you sure? All recorded diagnosis will be lost permanently</string>
    <string name="ui_warn_clear_search">Are you sure? All searched queries will be lost permanently</string>
    <string name="ui_text_clear_diagnosis_success">Diagnosis history cleared</string>
    <string name="ui_text_clear_search_success">Search history cleared</string>
    <string name="ui_text_symptoms">Symptoms</string>
    <string name="ui_text_treatment">Treatment</string>
    <string name="ui_text_cause">Cause</string>
    <string name="ui_desc_img_toolbar" translatable="false">Crop Image</string>
    <string name="ui_desc_img_disease" translatable="false">Disease Image</string>
    <string name="ui_hint_diagnose">Diagnose plant diseases with a leaf picture. Try to submit an image from your phone
        camera/gallery
    </string>
    <string name="val_labels" translatable="false">labels.txt</string>
    <string name="var_dataset" translatable="false" tools:ignore="Typos">set1</string>
    <string name="var_dim" translatable="false">224</string>
    <string name="val_healthy" translatable="false">Healthy</string>
    <string name="val_activity_settings" translatable="false">SettingsActivity</string>
    <string name="val_vector_fungi" translatable="false">Fungi</string>
    <string name="val_vector_pest" translatable="false">Pest</string>
    <string name="val_vector_bacteria" translatable="false">Bacteria</string>
    <string name="disease_bacterial_spot" translatable="false">Bacterial Spot</string>
    <string name="disease_common_rust" translatable="false">Common Rust</string>
    <string name="disease_cercospora_leaf_spot" translatable="false">Cercospora Leaf Spot</string>
    <string name="disease_septoria_leaf_spot" translatable="false">Septoria Leaf Spot</string>
    <string name="disease_northern_leaf_blight" translatable="false">Northern Leaf Blight</string>
    <string name="disease_early_blight" translatable="false">Early Blight</string>
    <string name="disease_late_blight" translatable="false">Late Blight</string>
    <string name="disease_powdery_mildew" translatable="false">Powdery Mildew</string>
    <string name="disease_leaf_mold" translatable="false">Leaf Mold</string>
    <string name="disease_spider_mite" translatable="false">Spider Mite</string>
    <string name="disease_target_spot" translatable="false">Target Spot</string>
    <string name="crop_id_bell_pepper" translatable="false">Bell Pepper</string>
    <string name="crop_id_corn" translatable="false">Corn</string>
    <string name="crop_id_potato" translatable="false">Potato</string>
    <string name="crop_id_squash" translatable="false">Squash</string>
    <string name="crop_id_tomato" translatable="false">Tomato</string>
    <string name="crop_name_bell_pepper">Bell Pepper</string>
    <string name="crop_name_corn">Corn</string>
    <string name="crop_name_potato">Potato</string>
    <string name="crop_name_squash">Squash</string>
    <string name="crop_name_tomato">Tomato</string>
    <string name="crop_sci_name_bell_pepper" translatable="false">Capsicum anuum</string>
    <string name="crop_sci_name_corn" translatable="false">Zea mays</string>
    <string name="crop_sci_name_potato" translatable="false">Solanum tuberosum</string>
    <string name="crop_sci_name_squash" translatable="false">Cucurbita maxima</string>
    <string name="crop_sci_name_tomato" translatable="false">Solanum lycopersicum</string>
    <string name="crop_desc_bell_pepper">Bell peppers (Capsicum anuum) locally known as “Alsal”, is a member of the
        capsicum family, which includes mild peppers, have a mild, sweet flavor and crisp, juicy flesh. According to
        foodfacts.com, bell peppers do not have a significant level of spiciness when compared to other peppers. Red
        bell peppers, as well as some yellow and orange types, are sweeter. Pepper plant seedlings should always be
        started indoors. To germinate, the seeds require the warmth of your home. Fill a seed tray halfway with seed
        starting soil or well-draining potting soil, then fill each container with one to three seeds. Place the tray in
        a warm location or use a warming pad to keep it between 70- and 90-degrees Fahrenheit. (21-32 C.) – the warmer
        the better. They are high in vitamin A, vitamin C, and potassium. Bell peppers also provide a good source of
        fiber, folate, and iron. Bell peppers, in addition to being high in nutrients, provide a pleasant and
        low-calorie crunch with every bite.
    </string>
    <string name="crop_desc_corn">Corn (Zea mays) locally known as “Mais” is a large grain plant came from the grass
        family and a native to Central America, but it is now cultivated all around the world. It has six major types
        including popcorn, flour corn, dent corn, sweet corn, pod corn, and flint corn. This popular cereal grain has
        numerous purposes, but it is mostly used for culinary purposes. It is usually eaten boiled, grilled, and
        ingredients in cooking some of our favorite dishes. It has been also used to make corn flour, cornmeal, corn
        oil, corn syrup, tortilla chips, and other corn processed products. It contains dietary fiber, calories,
        carbohydrates, proteins, omega-3 fatty acids, and other nutrients. It has vitamins A, B, E, pantothenic acid,
        riboflavin, niacin, folate, and thiamine. It has minerals such as copper, potassium, iron, phosphorus, zinc,
        manganese, calcium, and magnesium. Corn plants are tall, therefore if placed on the north side, they will not
        cast shadows on other garden plants, reducing plant productivity. The ideal temperature range is 60 to 85
        degrees Fahrenheit. Temperatures below 50 degrees F. Corn is not going to grow. Plants should be spaced 8 to 10
        inches apart. Plant hills 2 to 3 feet apart with 3 to 4 plants per hill as an alternative configuration.
    </string>
    <string name="crop_desc_potato">Potato (Solanum tuberosum L.) locally known as “patatas“, is a root vegetable native
        to the Americas, with the plant itself being a perennial in the nightshade family Solanaceae. It includes high
        levels of vitamin B-complex as well as vitamin C. A potato has more vitamin C than other fruits. Potatoes also
        contain a variety of minerals, including potassium, magnesium, phosphorus, iron, and calcium. Every mineral has
        its own function in keeping the body healthy. Potatoes are also high in fiber, which gives you a sensation of
        fullness and aids digestion. When potatoes are cooked with their skins on, they retain the majority of their
        fiber. Potato can reach a height of 100 cm (40 inches). As the potato plant matures, its compound leaves produce
        starch, which is then transmitted to the tips of its underground stems. The stems thicken to develop a few or up
        to 20 tubers near the soil surface.
    </string>
    <string name="crop_desc_squash">Squash (Cucurbita maxima), locally known as “kalabasa”, is an annual herbaceous vine
        that can grow to be four meters long or more. It has a huge fruit with a yellow, meaty inside and is a popular
        vegetable in Filipino recipes like ginataang kalabasa and pinakbet. It is high in vitamin A, which is beneficial
        for maintaining eye health, boosting the immune system, and supporting cell growth among others. When producing
        squash, it is crucial to know that this food develops best in soils rich in organic material, according to the
        Agricultural Training Institute in the Cordillera Administrative Region (ATI-CAR). It is also fruitful all year,
        especially in areas with temperatures ranging from 18 to 30 degrees Celsius.
    </string>
    <string name="crop_desc_tomato">Tomato (Solanum lycopersicum), locally known as “Kamatis“, is a savory, often red,
        edible fruit that grows on a plant. Tomato fruit is consumed in a variety of ways, including raw, as a component
        in numerous meals and sauces, and in beverages. While it is botanically a fruit, it is regarded as a vegetable
        in the culinary world, which has caused some confusion. The tomato is a member of the nightshade family. The
        plants normally develop to a height of 1–3 meters (3–10 ft) and have a weak, woody stem that vines over adjacent
        plants. It is a perennial, although often grown outdoors in temperate climates as an annual. Tomatoes are a top
        source of vitamins A and C. It also has a lot of fiber, beta-carotene, iron, lycopene, magnesium, niacin,
        potassium, phosphorus, riboflavin, and thiamine. Tomatoes have low levels of saturated fat, cholesterol, and
        salt. Moreover, unlike other foods, tomato cooking or processing (tomato paste, catsup, tomato soup, tomato
        sauce) is favorable to health. When tomatoes are heated, their cell walls break down, releasing more lycopene, a
        phytochemical that is beneficial to our health.
    </string>
    <string name="ui_head_learn_more">About this app</string>
    <string name="ui_text_learn_more">Learn More</string>
</resources>