<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:key="appearance" app:title="@string/ui_head_customization">

        <ListPreference
                app:key="theme"
                app:title="@string/ui_text_theme"
                app:entries="@array/entries_theme"
                app:entryValues="@array/values_theme"
                app:defaultValue="default"
                app:useSimpleSummaryProvider="true"/>

        <ListPreference
                app:key="lang"
                app:title="@string/ui_desc_lang"
                app:entries="@array/entries_lang"
                app:entryValues="@array/values_lang"
                app:defaultValue="en"
                app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>


    <PreferenceCategory app:key="personal" app:title="@string/ui_head_personal" app:isPreferenceVisible="false">

        <Preference
                app:key="clear_diagnosis"
                app:title="@string/ui_text_clear_diagnosis"
                android:summary="@string/ui_desc_clear_diagnosis"/>

        <Preference
                app:key="clear_search"
                app:title="@string/ui_text_clear_search"
                android:summary="@string/ui_desc_clear_search"/>

    </PreferenceCategory>

    <PreferenceCategory app:key="learn" app:title="@string/ui_head_learn_more">

        <Preference
            app:key="learn_more"
            app:title="@string/ui_text_learn_more"/>

    </PreferenceCategory>

</PreferenceScreen>